<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />
        
        <item
            android:id="@+id/nav_findings"
            android:icon="@drawable/ic_findings"
            android:title="@string/nav_findings" />
        
        <item
            android:id="@+id/nav_sites"
            android:icon="@drawable/ic_sites"
            android:title="@string/nav_sites" />
        
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_users"
            android:title="@string/nav_users" />
    </group>

    <item android:title="אפשרויות נוספות">
        <menu>
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_export"
                android:title="ייצא נתונים" />
            
            <item
                android:id="@+id/nav_import"
                android:icon="@drawable/ic_import"
                android:title="ייבא נתונים" />
            
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>